# autogbifml

./: .gitignore  .style.yapf  .tool-versions  Makefile  README.md  pyproject.toml  requirements.in  requirements.txt  train.sh
.github/workflows/: azure-static-web-apps-nice-forest-062e51b00.yml
autogbifml/: __main__.py
autogbifml/commands/: __init__.py  download.py  eval.py  gbif.py  predict.py  preprocess.py  train.py  tune.py
autogbifml/infrastructure/: logger.py
autogbifml/ml/: preprocessing.py  training.py
autogbifml/services/: base.py  model.py  preprocessing.py
docs/: data.md  index.md
docs/guide/: 1_install.md  2_dataset_download.md  3_preprocessing.md  4_tune_and_train.md
notebooks/: convert_shp.ipynb  eda_correlation.ipynb  eda_ds.ipynb  eda_feature_extraction.ipynb  eda_feature_selection.ipynb  eda_occurence.ipynb  eda_occurence_stats.ipynb  eda_occurrences.ipynb  eda_raster.ipynb  eda_res.ipynb  eda_results.ipynb  eda_tuning.ipynb  eda_undersampling.ipynb  eda_zone.ipynb  evaluation.ipynb  feature_extraction.ipynb  inference.ipynb  train_baseline.ipynb  train_feature_selection.ipynb
profiles/: download-africa.yml  download-america.yml  download-australia.yml  zonal-africa.yml  zonal-australia.yml
scripts/: tune.sh  undersample.py
web/: index.html
web/assets/css/: style.css
web/assets/js/: app.js
web/assets/maps/: africa.json  australia.json
