[project]
name = "s2-thesis-whale"
version = "0.1.0"
description = "Source code for my master's thesis"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # math and statistics
    "numpy<2.0.0",
    "statsmodels>=0.14.4",
    # data
    "pandas>=2.2.3",
    "pyarrow>=18.1.0",
    "geopandas>=1.0.1",
    "xarray>=2025.1.1",
    "xarray-spatial>=0.4.0",
    "dask[dataframe]>=2025.1.0",
    "copernicusmarine>=2.0.0",
    # machine learning
    "shap>=0.46.0",
    "xgboost>=2.1.3",
    "catboost>=1.2.7",
    "scikit-learn>=1.6.1",
    "imbalanced-learn>=0.13.0",
    # tuning and monitoring
    "mlflow>=2.19.0",
    "optuna>=4.2.0",
    # visualization
    "seaborn>=0.13.2",
    "datashader>=0.16.3",
    "matplotlib>=3.10.0",
    # utils    
    "joblib>=1.4.2",
    "pyyaml>=6.0.2",
    "pydantic>=2.10.5",
    "ipykernel>=6.29.5",
]
